[XForms] Fix required check for partial submissions. Bug 331961, r=aaronr+smaug